--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -37,29 +37,57 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const inventorsBornIn1500s = inventors.filter(i => i.year > 1500 && i.year < 1600);
+    console.table([...inventorsBornIn1500s]);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const firstAndLastNames = inventors.map(i => (i.first + " " + i.last))
+    console.log(firstAndLastNames);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const arr = Object.assign([], inventors);
+    arr.sort((a,b) => {
+      return a.year - b.year;
+    })
+    console.table([...arr]);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    console.log(inventors.reduce((acc, cur) => (acc + (cur.passed - cur.year)), 0));
 
     // 5. Sort the inventors by years lived
 
+    const yearsLived = Object.assign([], inventors);
+    yearsLived.sort((a, b) => {
+      return (a.passed - a.year) - (b.passed - b.year)
+    });
+    console.table([...yearsLived])
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-
+    const lastNames = Object.assign([], people);
+    console.table([...lastNames.sort((a, b) => {
+      const lastNameA = a.split(', ')[1];
+      const lastNameB = b.split(', ')[1]
+      return lastNameA.localeCompare(lastNameB);
+    })])
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
-
+    console.log(data.reduce((acc, cur) => {
+      if(acc[cur]) {
+        acc[cur]++;
+        return acc;
+      } else {
+        acc[cur] = 1;
+        return acc;
+      }
+    }, {}))
   </script>
 </body>
 </html>
