--- a/11 - Custom Video Player/index.html
+++ b/11 - Custom Video Player/index.html
@@ -15,10 +15,10 @@
         <div class="progress__filled"></div>
        </div>
        <button class="player__button toggle" title="Toggle Play" onclick="play()">►</button>
-       <input type="range" name="volume" class="player__slider" min="0" max="1" step="0.05" value="1">
-       <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1">
-       <button data-skip="-10" class="player__button">« 10s</button>
-       <button data-skip="25" class="player__button">25s »</button>
+       <input type="range" name="volume" class="player__slider" min="0" max="1" step="0.05" value="1" onchange="changeVolume(event)">
+       <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1" onchange="changePlayRate(event)">
+       <button data-skip="-10" class="player__button" onclick="backward()">« 10s</button>
+       <button data-skip="25" class="player__button" onclick="forward()">25s »</button>
      </div>
    </div>
 
