--- a/11 - Custom Video Player/index.html
+++ b/11 - Custom Video Player/index.html
@@ -11,7 +11,7 @@
      <video class="player__video viewer" src="652333414.mp4"></video>
 
      <div class="player__controls">
-       <div class="progress">
+       <div class="progress" onclick="jump(event)">
         <div class="progress__filled"></div>
        </div>
        <button class="player__button toggle" title="Toggle Play" onclick="play()">►</button>
