--- a/16 - Mouse Move Shadow/index-START.html
+++ b/16 - Mouse Move Shadow/index-START.html
@@ -1,40 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Mouse Shadow</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Mouse Shadow</title>
+  </head>
+  <body>
+    <div class="hero">
+      <h1 contenteditable>🔥WOAH!</h1>
+    </div>
 
-  <div class="hero">
-    <h1 contenteditable>🔥WOAH!</h1>
-  </div>
+    <style>
+      html {
+        color: black;
+        font-family: sans-serif;
+      }
 
-  <style>
-  html {
-    color: black;
-    font-family: sans-serif;
-  }
+      body {
+        margin: 0;
+      }
 
-  body {
-    margin: 0;
-  }
+      .hero {
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: black;
+      }
 
-  .hero {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: black;
-  }
+      h1 {
+        text-shadow: 10px 10px 0 rgba(0, 0, 0, 1);
+        font-size: 100px;
+      }
+    </style>
 
-  h1 {
-    text-shadow: 10px 10px 0 rgba(0,0,0,1);
-    font-size: 100px;
-  }
-  </style>
+    <script>
+      const factor = 0.5;
+      const div = document.querySelector(".hero");
+      const text = document.querySelector("h1");
 
-<script>
-</script>
-</body>
+      function shadow(e) {
+        const { offsetWidth: width, offsetHeight: height } = div;
+        let { offsetX: left, offsetY: top } = e;
+
+        if (this !== e.target) {
+          left = left + e.target.offsetLeft;
+          top = top + e.target.offsetTop;
+        }
+
+        const xWalk = (left - width / 2) * factor;
+        const yWalk = (top - height / 2) * factor;
+        text.style.textShadow = `
+        ${xWalk}px ${yWalk}px 0 green,
+        ${xWalk * -1}px ${yWalk}px 0 red,
+        ${xWalk}px ${yWalk * -1}px 0 orange,
+        ${xWalk * -1}px ${yWalk * -1}px 0 blue
+        `;
+      }
+      div.addEventListener("mousemove", shadow);
+    </script>
+  </body>
 </html>
