--- a/17 - Sort Without Articles/index-START.html
+++ b/17 - Sort Without Articles/index-START.html
@@ -1,55 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Sort Without Articles</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Sort Without Articles</title>
+  </head>
+  <body>
+    <style>
+      body {
+        margin: 0;
+        font-family: sans-serif;
+        background: url("https://source.unsplash.com/nDqA4d5NL0k/2000x2000");
+        background-size: cover;
+        display: flex;
+        align-items: center;
+        min-height: 100vh;
+      }
 
-  <style>
-    body {
-      margin: 0;
-      font-family: sans-serif;
-      background: url("https://source.unsplash.com/nDqA4d5NL0k/2000x2000");
-      background-size: cover;
-      display: flex;
-      align-items: center;
-      min-height: 100vh;
-    }
+      #bands {
+        list-style: inside square;
+        font-size: 20px;
+        background: white;
+        width: 500px;
+        margin: auto;
+        padding: 0;
+        box-shadow: 0 0 0 20px rgba(0, 0, 0, 0.05);
+      }
 
-    #bands {
-      list-style: inside square;
-      font-size: 20px;
-      background: white;
-      width: 500px;
-      margin: auto;
-      padding: 0;
-      box-shadow: 0 0 0 20px rgba(0, 0, 0, 0.05);
-    }
-    
-    #bands li {
-      border-bottom: 1px solid #efefef;
-      padding: 20px;
-    }
-    
-    #bands li:last-child {
-      border-bottom: 0;
-    }
+      #bands li {
+        border-bottom: 1px solid #efefef;
+        padding: 20px;
+      }
 
-    a {
-      color: #ffc600;
-      text-decoration: none;
-    }
+      #bands li:last-child {
+        border-bottom: 0;
+      }
 
-  </style>
+      a {
+        color: #ffc600;
+        text-decoration: none;
+      }
+    </style>
 
-  <ul id="bands"></ul>
+    <ul id="bands"></ul>
 
-<script>
-const bands = ['The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil', 'Norma Jean', 'The Bled', 'Say Anything', 'The Midway State', 'We Came as Romans', 'Counterparts', 'Oh, Sleeper', 'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'];
+    <script>
+      const bands = [
+        "The Plot in You",
+        "The Devil Wears Prada",
+        "Pierce the Veil",
+        "Norma Jean",
+        "The Bled",
+        "Say Anything",
+        "The Midway State",
+        "We Came as Romans",
+        "Counterparts",
+        "Oh, Sleeper",
+        "A Skylit Drive",
+        "Anywhere But Here",
+        "An Old Dog",
+      ];
 
+      // Method 1
+      // const articles = ["the", "an", "a"];
+      // const ul = document.querySelector("#bands");
+      // window.onload = () => {
+      //   let arrWithoutArticles = bands.map((e) => {
+      //     let temp = e.split(" ");
+      //     temp = temp.filter((e) => !articles.includes(e.toLowerCase()));
+      //     return temp.join("");
+      //   });
 
-</script>
+      //   let map = new Map();
+      //   arrWithoutArticles.forEach((e, index) => {
+      //     map.set(e, `${bands[index]}`);
+      //   });
 
-</body>
+      //   const sortedArr = arrWithoutArticles.sort();
+      //   sortedArr.forEach((e) => {
+      //     const li = document.createElement("li");
+      //     li.innerText = map.get(e);
+      //     ul.appendChild(li);
+      //   });
+      // };
+
+      // Method 2
+      const ul = document.querySelector("#bands");
+      window.onload = () => {
+        const strip = (str) => {
+          return str.replace(/^(a |the |an )/i, "").trim();
+        };
+
+        let res = bands.sort((a, b) => (strip(a) < strip(b) ? -1 : 1));
+        res.forEach((e) => {
+          const li = document.createElement("li");
+          li.innerText = e;
+          ul.appendChild(li);
+        });
+      };
+    </script>
+  </body>
 </html>
